# ai-agent-disinfo-demo

./: .env.example  .gitignore  ARD.md  README.md  RUNBOOK.md  pyproject.toml  streamlit_app.py  ui_theme.py
.streamlit/: config.toml
docs/: architectures.md
docs/specs/: 2026-06-20-contrastive-evals-design.md  2026-06-30-single-raw-agent-design.md
eval/: dataset.jsonl  debuggability.py  euvsdisinfo_cases.jsonl  hard_dataset.jsonl  run_contrastive.py  run_eval.py
src/: __init__.py  config.py  contours.py  dataset.py  metrics.py  multi_agent.py  runner.py  scoring.py  single_agent.py  state.py  workflow_graph.py  workflow_with_fetch.py
src/prompts/: agent_system.md  factcheck.md  narrative.md  screening.md  supervisor.md  verifier.md
