[project]
name = "content-analysis-demo"
version = "0.1.0"
description = "Architecture comparison demo for content analysis workflows on LangGraph + Gemini + Langfuse"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=4.2.5",
    "langchain-tavily>=0.2.18",
    "langfuse>=3",
    "langgraph>=1.2.6",
    "langgraph-supervisor>=0.0.31",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
